force-app/main/default/objects/LVPostion__c/fields/ProcessingbeforeHT__c.field-meta.xml
<CustomField>
    <fullName>ProcessingbeforeHT__c</fullName>
    <label>Processing before HT (St.28)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>F</fullName>
                <isActive>false</isActive>
                <label>F</label>
            </value>
            <value>
                <fullName>O</fullName>
                <isActive>false</isActive>
                <label>O</label>
            </value>
            <value>
                <fullName>P</fullName>
                <isActive>false</isActive>
                <label>P</label>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>