force-app/main/default/objects/LVPostion__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>LV Position</relationshipLabel>
    <relationshipName>LV_Position</relationshipName>
    <type>Lookup</type>
</CustomField>