force-app/main/default/objects/LVPostion__c/fields/ProductionKeySummary__c.field-meta.xml
<CustomField>
    <fullName>ProductionKeySummary__c</fullName>
    <label>Production Key Summary</label> 
    <length>255</length>
    <type>Text</type>
</CustomField>