force-app/main/default/objects/LVPostion__c/fields/PurposeofUse__c.field-meta.xml
<CustomField>
    <fullName>PurposeofUse__c</fullName>
    <label>Purpose of Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-UNKNOWN</fullName>
            </value>
            <value>
                <fullName>2-TRADE</fullName>
            </value>
            <value>
                <fullName>3-GRINDING MATERIAL</fullName>
            </value>
            <value>
                <fullName>4-HEADSTOCK MATERIAL</fullName>
            </value>
            <value>
                <fullName>5-CHUCKING STEEL</fullName>
            </value>
            <value>
                <fullName>6-FLUTED CYLINDER</fullName>
            </value>
            <value>
                <fullName>7-SHOOTING STEEL</fullName>
            </value>
            <value>
                <fullName>8-RIFLE RIFLE</fullName>
            </value>
            <value>
                <fullName>9-TURNING</fullName>
            </value>
            <value>
                <fullName>10-DRAWING MATERIAL</fullName>
            </value>
            <value>
                <fullName>11-DRAWING MATERIAL PRESSURE TIGHT</fullName>
            </value>
            <value>
                <fullName>12-DRAWING MATERIAL FOR DRILLING</fullName>
            </value>
            <value>
                <fullName>13-DRAWING MATERIAL ROUND ON 6-KT.</fullName>
            </value>
            <value>
                <fullName>14-DRAWING MATERIAL ROUND ON 6-KT. PRESSURED.</fullName>
            </value>
            <value>
                <fullName>15-DRAWING MATERIAL FOR PISTON RODS</fullName>
            </value>
            <value>
                <fullName>16-DRAWING MATERIAL FOR WELDING STUDS</fullName>
            </value>
            <value>
                <fullName>17-DRAWING MATERIAL FOR UPSETTING</fullName>
            </value>
            <value>
                <fullName>18-DRAWING STOCK FOR COLD ROLLING</fullName>
            </value>
            <value>
                <fullName>19-PLATING QUALITY</fullName>
            </value>
            <value>
                <fullName>1A-SOFT DRAWING MATERIAL</fullName>
            </value>
            <value>
                <fullName>1B-HARD DRAWING WIRE</fullName>
            </value>
            <value>
                <fullName>1C-PIANO WIRE PIANO WIRE</fullName>
            </value>
            <value>
                <fullName>1D-GRIDS</fullName>
            </value>
            <value>
                <fullName>1E-STEEL FLEX BOWDEN WIRE</fullName>
            </value>
            <value>
                <fullName>1F-STAPLES STAPLES</fullName>
            </value>
            <value>
                <fullName>1G-TEXTILE NEEDLES</fullName>
            </value>
            <value>
                <fullName>1H-HOSEWIRE TUBING WIRE</fullName>
            </value>
            <value>
                <fullName>1K-HEAD SUPPORT WIRE</fullName>
            </value>
            <value>
                <fullName>1L-CABLE WIRE</fullName>
            </value>
            <value>
                <fullName>1M-OFFSHORE/CABLES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>