force-app/main/default/objects/LVPostion__c/fields/QWDecision__c.field-meta.xml
<CustomField>
    <fullName>QWDecision__c</fullName>
    <label>Decision QW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not in Program</fullName>
            </value>
            <value>
                <fullName>Not Technically Feasible</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>