force-app/main/default/objects/LVPostion__c/fields/RingWeightApprox__c.field-meta.xml
<CustomField>
    <fullName>RingWeightApprox__c</fullName>
    <label>Coil Weight approx.</label> 
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>