force-app/main/default/objects/LVPostion__c/fields/RingWeightMin__c.field-meta.xml
<CustomField>
    <fullName>RingWeightMin__c</fullName>
    <label>Coil Weight min.</label> 
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>