force-app/main/default/objects/LVPostion__c/fields/SiMin__c.field-meta.xml
<CustomField>
    <fullName>SiMin__c</fullName>
    <label>Si min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>