force-app/main/default/objects/LVPostion__c/fields/Smax__c.field-meta.xml
<CustomField>
    <fullName>Smax__c</fullName>
    <label>S max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>