force-app/main/default/objects/LVPostion__c/fields/Smin__c.field-meta.xml
<CustomField>
    <fullName>Smin__c</fullName>
    <label>S min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>