force-app/main/default/objects/LVPostion__c/fields/SnMax__c.field-meta.xml
<CustomField>
    <fullName>SnMax__c</fullName>
    <label>Sn max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>