force-app/main/default/objects/LVPostion__c/fields/SnMin__c.field-meta.xml
<CustomField>
    <fullName>SnMin__c</fullName>
    <label>Sn min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>