force-app/main/default/objects/LVPostion__c/fields/SpecialInspections__c.field-meta.xml
<CustomField>
    <fullName>SpecialInspections__c</fullName>
    <label>Special Inspections (St.43)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>