force-app/main/default/objects/LVPostion__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status Full</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Processed</fullName>
            </value>
            <value>
                <fullName>Partly Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>