force-app/main/default/objects/LVPostion__c/fields/SteelMillTesting__c.field-meta.xml
<CustomField>
    <fullName>SteelMillTesting__c</fullName>
    <label>Steel Mill Testing (St.9)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>