force-app/main/default/objects/LVPostion__c/fields/Straightness__c.field-meta.xml
<CustomField>
    <fullName>Straightness__c</fullName>
    <label>Straightness</label> 
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1mm</fullName>
            </value>
            <value>
                <fullName>2mm</fullName>
            </value>
            <value>
                <fullName>4mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>