force-app/main/default/objects/LVPostion__c/fields/STWCastingFormat__c.field-meta.xml
<CustomField>
    <fullName>STWCastingFormat__c</fullName>
    <label>STW Casting Format (St.3-5)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>125</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>154</fullName>
            </value>
            <value>
                <fullName>155</fullName>
            </value>
            <value>
                <fullName>160</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>255</fullName>
            </value>
            <value>
                <fullName>280</fullName>
            </value>
            <value>
                <fullName>320</fullName>
                <isActive>false</isActive>
                <label>320</label>
            </value>
            <value>
                <fullName>340</fullName>
            </value>
            <value>
                <fullName>999</fullName>
                <isActive>false</isActive>
                <label>999</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>