force-app/main/default/objects/LVPostion__c/fields/SurfaceInspection__c.field-meta.xml
<CustomField>
    <fullName>SurfaceInspection__c</fullName>
    <label>Surface Inspection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>