force-app/main/default/objects/LVPostion__c/fields/TargetProduct__c.field-meta.xml
<CustomField>
    <fullName>TargetProduct__c</fullName>
    <label>Target Product (St.1)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>