force-app/main/default/objects/LVPostion__c/fields/TestingFinishedMaterial__c.field-meta.xml
<CustomField>
    <fullName>TestingFinishedMaterial__c</fullName>
    <label>Testing Finished Material (St.44)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>