force-app/main/default/objects/LVPostion__c/fields/TiMax__c.field-meta.xml
<CustomField>
    <fullName>TiMax__c</fullName>
    <label>Ti max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>