force-app/main/default/objects/LVPostion__c/fields/TiMin__c.field-meta.xml
<CustomField>
    <fullName>TiMin__c</fullName>
    <label>Ti min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>