force-app/main/default/objects/LVPostion__c/fields/ToleranceAPlus__c.field-meta.xml
<CustomField>
    <fullName>ToleranceAPlus__c</fullName>
    <label>Tolerance A+</label> 
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>