force-app/main/default/objects/LVPostion__c/fields/ToleranceBMinus__c.field-meta.xml
<CustomField>
    <fullName>ToleranceBMinus__c</fullName>
    <label>Tolerance B-</label> 
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>