force-app/main/default/objects/LVPostion__c/fields/USHTesting__c.field-meta.xml
<CustomField>
    <fullName>USHTesting__c</fullName>
    <label>HZV - USH Testing (St.20+21)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>62</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>