force-app/main/default/objects/LVPostion__c/fields/USInspection__c.field-meta.xml
<CustomField>
    <fullName>USInspection__c</fullName>
    <label>Inspec.- US Inspection (St.40-42)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>K32</fullName>
            </value>
            <value>
                <fullName>K52</fullName>
            </value>
            <value>
                <fullName>K53</fullName>
            </value>
            <value>
                <fullName>K54</fullName>
            </value>
            <value>
                <fullName>K55</fullName>
            </value>
            <value>
                <fullName>K65</fullName>
                <isActive>false</isActive>
                <label>K65</label>
            </value>
            <value>
                <fullName>P00</fullName>
            </value>
            <value>
                <fullName>P01</fullName>
            </value>
            <value>
                <fullName>P05</fullName>
            </value>
            <value>
                <fullName>P10</fullName>
            </value>
            <value>
                <fullName>P12</fullName>
            </value>
            <value>
                <fullName>P14</fullName>
            </value>
            <value>
                <fullName>P15</fullName>
            </value>
            <value>
                <fullName>P25</fullName>
            </value>
            <value>
                <fullName>S12</fullName>
            </value>
            <value>
                <fullName>S15</fullName>
            </value>
            <value>
                <fullName>S22</fullName>
            </value>
            <value>
                <fullName>S32</fullName>
            </value>
            <value>
                <fullName>S33</fullName>
            </value>
            <value>
                <fullName>S34</fullName>
            </value>
            <value>
                <fullName>S51</fullName>
            </value>
            <value>
                <fullName>S52</fullName>
            </value>
            <value>
                <fullName>S53</fullName>
            </value>
            <value>
                <fullName>S54</fullName>
            </value>
            <value>
                <fullName>S55</fullName>
            </value>
            <value>
                <fullName>S56</fullName>
            </value>
            <value>
                <fullName>S62</fullName>
            </value>
            <value>
                <fullName>S63</fullName>
            </value>
            <value>
                <fullName>S64</fullName>
            </value>
            <value>
                <fullName>S65</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>