force-app/main/default/objects/LVPostion__c/fields/WSAin__c.field-meta.xml
<CustomField>
    <fullName>WSAin__c</fullName>
    <label>WSA in % (St.34+35)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>