force-app/main/default/objects/LVPostion__c/validationRules/MandatoryFieldsMassStdInquiry.validationRule-meta.xml
<ValidationRule>
    <fullName>MandatoryFieldsMassStdInquiry</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.ByPassLogic__c.ByPassValidation__c),
OR(
ISPICKVAL(Type__c , &apos;Standard Inquiry&apos;),
ISPICKVAL(Type__c,&apos;Mass Inquiry&apos;)),
OR(
ISBLANK(Product__c),
ISBLANK(DimensionAFrom__c),
ISBLANK(TEXT(PurposeofUse__c)),
ISBLANK(TEXT(HeatTreatmentSales__c)),
ISBLANK(TEXT(SurfaceCondition__c)),
ISBLANK(CustomerSteelGrade__c)
))</errorConditionFormula>
    <errorMessage>Please fill in the required fields Customer Steel Grade, Product, Dimension A from, Purpose of Use, Heat Treatment and Surface Condition.</errorMessage>
</ValidationRule>